Second Commit, basic html structure complete

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -17,28 +17,80 @@
 		 </ul>
 	</nav>
 
-	<div class="intropage">
-		<h1>Jenny Allton-Twi<b>s</b>t</h1>
-	</div>
 
-	<div class="portfolio">
+
+	<div class="intropage">
 		<div class="container">
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
+			<h1>Jenny Allton-Twi<b>s</b>t</h1>
 		</div>
 	</div>
 
-	<div class="aboutme">
+
+
+	<div class="portfolio">
+		<div class="container">
+			<h2>Portfolio</h2>
+			<div class="box">
+				<img src="somewhere.jpg" alt="Project Image"/>
+				<p>Some info about this very cool thing I invented here</p>
+				<h4>Date & Place</h4>
+			</div>
+			<div class="box">
+				<img src="somewhere.jpg" alt="Project Image"/>
+				<p>Some info about this very cool thing I invented here</p>
+				<h4>Date & Place</h4>
+			</div>
+			<div class="box">
+				<img src="somewhere.jpg" alt="Project Image"/>
+				<p>Some info about this very cool thing I invented here</p>
+				<h4>Date & Place</h4>
+			</div>
+			<div class="box">
+				<img src="somewhere.jpg" alt="Project Image"/>
+				<p>Some info about this very cool thing I invented here</p>
+				<h4>Date & Place</h4>
+			</div>
+			<div class="box">
+				<img src="somewhere.jpg" alt="Project Image"/>
+				<p>Some info about this very cool thing I invented here</p>
+				<h4>Date & Place</h4>
+			</div>
+			<div class="box">
+				<img src="somewhere.jpg" alt="Project Image"/>
+				<p>Some info about this very cool thing I invented here</p>
+				<h4>Date & Place</h4>
+			</div>
+		</div>
 	</div>
 
+
+
+	<div class="aboutme">
+		<div class="container">
+			<div class="medbox">
+				<h2>About Me</h2>
+				<img src="somewhere.jpg" alt="Jenny Allton-Twist looking happy"/>
+			</div>
+			<div class="medbox">
+				<p>Some stuff about me, a paragraph in which I talk humorously and succintly about my many achievements and accolades, as well as the interesting and altruistic activities I undertake in my spare time.</p>
+			</div>
+		</div>
+	</div>
+
+
+
 	<div class="contact">
+		<div class="container">
+			<div class="social"></div>
+			<h2>Contact</h2>
+			<h3> email @ email.com </h3>
+			<p>Blurb about contact</p>
+		</div>
 	</div>
 </body>
 
+
+
 <footer>
-	
+	<h6>Footer info</h6>
 </footer>
