First wave of CSS styling

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,10 +10,10 @@
 
 <body>
 	<nav><ul>
-			<li>Home</li>
-			<li>Portfolio</li>
-			<li>About Me</li>
-			<li>Contact</li>
+			<li><a href="home">Home</a></li>
+			<li><a href="portfolio">Portfolio</a></li>
+			<li><a href="aboutme">About Me</a></li>
+			<li><a href="contact">Contact</a></li>
 		 </ul>
 	</nav>
 
@@ -21,15 +21,14 @@
 
 	<div class="intropage">
 		<div class="container">
-			<h1>Jenny Allton-Twi<b>s</b>t</h1>
+			<h1>JENNY ALLTON-TWI<b>S</b>T</h1>
 		</div>
 	</div>
 
 
 
-	<div class="portfolio">
+	<div class="portfolio"><h2>Portfolio</h2>
 		<div class="container">
-			<h2>Portfolio</h2>
 			<div class="box">
 				<img src="somewhere.jpg" alt="Project Image"/>
 				<p>Some info about this very cool thing I invented here</p>
@@ -83,7 +82,7 @@
 		<div class="container">
 			<div class="social"></div>
 			<h2>Contact</h2>
-			<h3> email @ email.com </h3>
+			<p> email @ email.com </p>
 			<p>Blurb about contact</p>
 		</div>
 	</div>
