First wave CSS complete, before animating the S

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,10 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="normalize.css" type="text/css" rel="stylesheet">
 	<link href="Portfoliostyle.css" type="text/css" rel="stylesheet">	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
-	<nav><ul>
+	<nav>
+		<ul>
 			<li><a href="home">Home</a></li>
 			<li><a href="portfolio">Portfolio</a></li>
 			<li><a href="aboutme">About Me</a></li>
@@ -30,34 +34,34 @@
 	<div class="portfolio"><h2>Portfolio</h2>
 		<div class="container">
 			<div class="box">
-				<img src="somewhere.jpg" alt="Project Image"/>
+				<a href="#"><img src="tech.jpg" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
-				<h4>Date & Place</h4>
+				<h4>October 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="box">
-				<img src="somewhere.jpg" alt="Project Image"/>
+				<a href="#"><img src="woman.jpg" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
-				<h4>Date & Place</h4>
+				<h4>October 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="box">
-				<img src="somewhere.jpg" alt="Project Image"/>
+				<a href="#"><img src="hacker.jpg" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
-				<h4>Date & Place</h4>
+				<h4>November 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="box">
-				<img src="somewhere.jpg" alt="Project Image"/>
+				<a href="#"><img src="handshake.jpg" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
-				<h4>Date & Place</h4>
+				<h4>December 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="box">
-				<img src="somewhere.jpg" alt="Project Image"/>
+				<a href="#"><img src="lightbulb.jpg" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
-				<h4>Date & Place</h4>
+				<h4>January 2021, Bristol UK</h4>
 			</div>
 			<div class="box">
-				<img src="somewhere.jpg" alt="Project Image"/>
+				<a href="#"><img src="teamwork.png" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
-				<h4>Date & Place</h4>
+				<h4>January 2021, Bristol UK</h4>
 			</div>
 		</div>
 	</div>
@@ -68,7 +72,7 @@
 		<div class="container">
 			<div class="medbox">
 				<h2>About Me</h2>
-				<img src="somewhere.jpg" alt="Jenny Allton-Twist looking happy"/>
+				<img src="jennyphoto.jpg" alt="Jenny Allton-Twist looking happy"/>
 			</div>
 			<div class="medbox">
 				<p>Some stuff about me, a paragraph in which I talk humorously and succintly about my many achievements and accolades, as well as the interesting and altruistic activities I undertake in my spare time.</p>
@@ -80,10 +84,16 @@
 
 	<div class="contact">
 		<div class="container">
-			<div class="social"></div>
-			<h2>Contact</h2>
-			<p> email @ email.com </p>
-			<p>Blurb about contact</p>
+			<div class="social">
+				<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
+				<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
+				<a href="https://github.com/jennymegan" class="fa fa-github"></a>
+			</div>
+			<div class="contactinfo">
+				<h2>Contact</h2>
+				<a href="#"><p> jennyalltontwist@gmail.com </p></a>
+				<p>Send me an email or reach out on my social media using the buttons opposite.</p>
+			</div>	
 		</div>
 	</div>
 </body>
@@ -91,5 +101,5 @@
 
 
 <footer>
-	<h6>Footer info</h6>
+	<h6>Copyright J A-T 2020 &copy;</h6>
 </footer>
