First draft html and css

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,16 +14,16 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="home">Home</a></li>
-			<li><a href="portfolio">Portfolio</a></li>
-			<li><a href="aboutme">About Me</a></li>
-			<li><a href="contact">Contact</a></li>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#portfolio">Portfolio</a></li>
+			<li><a href="#aboutme">About Me</a></li>
+			<li><a href="#contact">Contact</a></li>
 		 </ul>
 	</nav>
 
 
 
-	<div class="intropage">
+	<div class="intropage" id="home">
 		<div class="container">
 			<h1>JENNY ALLTON-TWI<b>S</b>T</h1>
 		</div>
@@ -31,7 +31,7 @@
 
 
 
-	<div class="portfolio"><h2>Portfolio</h2>
+	<div class="portfolio" id="portfolio"><h2>Portfolio</h2>
 		<div class="container">
 			<div class="box">
 				<a href="#"><img src="tech.jpg" alt="Project Image"/></a>
@@ -68,7 +68,7 @@
 
 
 
-	<div class="aboutme">
+	<div class="aboutme" id="aboutme">
 		<div class="container">
 			<div class="medbox">
 				<h2>About Me</h2>
@@ -80,26 +80,28 @@
 		</div>
 	</div>
 
+</body>
 
 
-	<div class="contact">
+<footer>
+	<div class="social">
+		<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
+		<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
+		<a href="https://github.com/jennymegan" class="fa fa-github"></a>
+	</div>
+	<h6>Copyright J A-T 2020 &copy;</h6>
+</footer>
+
+
+
+<!-- Just in case you want to reinstate a dedicated Contact section -->
+
+<!--<div class="contact" id="contact">
 		<div class="container">
-			<div class="social">
-				<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
-				<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
-				<a href="https://github.com/jennymegan" class="fa fa-github"></a>
-			</div>
 			<div class="contactinfo">
 				<h2>Contact</h2>
 				<a href="#"><p> jennyalltontwist@gmail.com </p></a>
 				<p>Send me an email or reach out on my social media using the buttons opposite.</p>
 			</div>	
 		</div>
-	</div>
-</body>
-
-
-
-<footer>
-	<h6>Copyright J A-T 2020 &copy;</h6>
-</footer>
+	</div> -->
