end of day Monday

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -25,7 +25,7 @@
 
 	<div class="intropage" id="home">
 		<div class="container">
-			<h1>JENNY ALLTON-TWI<b>S</b>T</h1>
+			<h1>JENNY ALLTON-TWI<span class="spinner">S</span>T</h1>
 		</div>
 	</div>
 
