--- a/Portfolio.html
+++ b/Portfolio.html
@@ -7,8 +7,6 @@
 	<link href="normalize.css" type="text/css" rel="stylesheet">
 	<link href="Portfoliostyle.css" type="text/css" rel="stylesheet">	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
 </head>
 
 <body>
@@ -19,13 +17,17 @@
 			<li><a href="#aboutme">About Me</a></li>
 			<li><a href="#contact">Contact</a></li>
 		 </ul>
+		 <div>
+			 
+<!-- I want an icon in here  -->
+		 </div>
 	</nav>
 
 
 
 	<div class="intropage" id="home">
 		<div class="container">
-			<h1>JENNY ALLTON-TWI<span class="spinner">S</span>T</h1>
+			<h1>JENNY ALLTON-TWI<span clasmate s="spinner">S</span>T</h1>
 		</div>
 	</div>
 
@@ -34,7 +36,7 @@
 	<div class="portfolio" id="portfolio"><h2>Portfolio</h2>
 		<div class="container">
 			<div class="box">
-				<a href="#"><img src="tech.jpg" alt="Project Image"/></a>
+				<a href="project.html"><img src="tech.jpg" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>October 2020, Mayden Academy, Bath UK</h4>
 			</div>
@@ -69,12 +71,13 @@
 
 
 	<div class="aboutme" id="aboutme">
-		<div class="container">
-			<div class="medbox">
-				<h2>About Me</h2>
-				<img src="jennyphoto.jpg" alt="Jenny Allton-Twist looking happy"/>
+		<div class="container aboutmebackground">
+			
+			<div class="medbox">	
+				<img src="jennyaboutme.jpg" alt="Jenny Allton-Twist looking happy"/>
 			</div>
 			<div class="medbox">
+				<h2>About Me</h2>
 				<p>Some stuff about me, a paragraph in which I talk humorously and succintly about my many achievements and accolades, as well as the interesting and altruistic activities I undertake in my spare time.</p>
 			</div>
 		</div>
@@ -93,10 +96,15 @@
 				<p>Send me an email or reach out on my social media using the buttons opposite.</p>
 			</div>	
 		</div>
-	</div> -->
+	</div> 
+
+And here's a link to the image for about me 
+<img src="AboutMeBG3.jpg" alt="Background to About Me" />
+
+-->
 
 <footer>
-	<div class="social">
+	<div class="social" id="contact">
 		<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
 		<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
 		<a href="https://github.com/jennymegan" class="fa fa-github"></a>
