--- a/Portfolio.html
+++ b/Portfolio.html
@@ -41,27 +41,27 @@
 				<h4>October 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="box">
-				<a href="#"><img src="woman.jpg" alt="Project Image"/></a>
+				<a href="project.html"><img src="woman.jpg" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>October 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="box">
-				<a href="#"><img src="hacker.jpg" alt="Project Image"/></a>
+				<a href="project.html"><img src="hacker.jpg" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>November 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="box">
-				<a href="#"><img src="handshake.jpg" alt="Project Image"/></a>
+				<a href="project.html"><img src="handshake.jpg" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>December 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="box">
-				<a href="#"><img src="lightbulb.jpg" alt="Project Image"/></a>
+				<a href="project.html"><img src="lightbulb.jpg" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>January 2021, Bristol UK</h4>
 			</div>
 			<div class="box">
-				<a href="#"><img src="teamwork.png" alt="Project Image"/></a>
+				<a href="project.html"><img src="teamwork.png" alt="Project Image"/></a>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>January 2021, Bristol UK</h4>
 			</div>
