changes made after code review

--- a/project.html
+++ b/project.html
@@ -17,26 +17,27 @@
 			<li><a href="portfolio.html#aboutme">About Me</a></li>
 			<li><a href="portfolio.html#contact">Contact</a></li>
 		 </ul>
-		 <div><img src="" alt=""/>
+		 <!-- <div><img src="" alt=""/> Place for logo -->
 	</nav>
 
-	<div class="container">
-		<img src="projectimg.jpg" alt="Photos of Project">
-		<h2>Project The First</h2>
-		<p>This went well and we were all thrilled.</p>
+	<div class="container project">
+		<div class="projectimg"><img src="projectimg.jpg" alt="Photos of Project" width="600"></div>
+		<div> 
+			<h2>Project The First</h2>
+			<p>This went well and we were all thrilled.</p>
+		</div>
 	</div>
 	
+	<footer>
+		<div class="social">
+			<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
+			<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
+			<a href="https://github.com/jennymegan" class="fa fa-github"></a>
+		</div>
+		<h6>Copyright J A-T 2020 &copy;</h6>
+	</footer>
+
 </body>
 
-
-
-<footer>
-	<div class="social">
-		<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
-		<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
-		<a href="https://github.com/jennymegan" class="fa fa-github"></a>
-	</div>
-	<h6>Copyright J A-T 2020 &copy;</h6>
-</footer>
-
+</html>
 
