--- a/Portfolio.html
+++ b/Portfolio.html
@@ -19,7 +19,7 @@
 		 </ul>
 		 <div>
 			 
-<!-- I want an icon in here  -->
+	 <!-- <div><img src="" alt=""/> Place for logo -->
 		 </div>
 	</nav>
 
@@ -82,34 +82,16 @@
 			</div>
 		</div>
 	</div>
-
+	<footer>
+		<div class="social" id="contact">
+			<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
+			<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
+			<a href="https://github.com/jennymegan" class="fa fa-github"></a>
+		</div>
+		<h6>Copyright J A-T 2020 &copy;</h6>
+	</footer>
 </body>
 
 
-<!-- Just in case you want to reinstate a dedicated Contact section -->
-
-<!--<div class="contact" id="contact">
-		<div class="container">
-			<div class="contactinfo">
-				<h2>Contact</h2>
-				<a href="#"><p> jennyalltontwist@gmail.com </p></a>
-				<p>Send me an email or reach out on my social media using the buttons opposite.</p>
-			</div>	
-		</div>
-	</div> 
-
-And here's a link to the image for about me 
-<img src="AboutMeBG3.jpg" alt="Background to About Me" />
-
--->
-
-<footer>
-	<div class="social" id="contact">
-		<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
-		<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
-		<a href="https://github.com/jennymegan" class="fa fa-github"></a>
-	</div>
-	<h6>Copyright J A-T 2020 &copy;</h6>
-</footer>
-
+</html>
 
