Updates including spinning S and hover buttons

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,10 +12,7 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="#home">Home</a></li>
-			<li><a href="#portfolio">Portfolio</a></li>
-			<li><a href="#aboutme">About Me</a></li>
-			<li><a href="#contact">Contact</a></li>
+			<li><a href="#home">Home</a></li><li><a href="#portfolio">Portfolio</a></li><li><a href="#aboutme">About Me</a></li><li class="lastnav"><a href="#contact">Contact</a></li>
 		 </ul>
 		 <div>
 			 
@@ -27,7 +24,7 @@
 
 	<div class="intropage" id="home">
 		<div class="container">
-			<h1>JENNY ALLTON-TWI<span clasmate s="spinner">S</span>T</h1>
+			<h1>JENNY ALLTON-TWI<div class="spinner">S</div>T</h1>
 		</div>
 	</div>
 
