--- a/index.html
+++ b/index.html
@@ -29,35 +29,42 @@
 
 
 
-	<div class="portfolio" id="portfolio"><h2>Portfolio</h2>
+	<div class="portfolio" id="portfolio">
+		<h2>Portfolio</h2>
 		<div class="container">
 			<div class="projectbox">
 				<a href="project.html"><img src="tech.jpg" alt="Project Image"/></a>
+				<h3>Project Name</h3>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>October 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="projectbox">
 				<a href="project.html"><img src="woman.jpg" alt="Project Image"/></a>
+				<h3>Project Name</h3>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>October 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="projectbox">
 				<a href="project.html"><img src="hacker.jpg" alt="Project Image"/></a>
+				<h3>Project Name</h3>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>November 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="projectbox">
 				<a href="project.html"><img src="handshake.jpg" alt="Project Image"/></a>
+				<h3>Project Name</h3>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>December 2020, Mayden Academy, Bath UK</h4>
 			</div>
 			<div class="projectbox">
 				<a href="project.html"><img src="lightbulb.jpg" alt="Project Image"/></a>
+				<h3>Project Name</h3>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>January 2021, Bristol UK</h4>
 			</div>
 			<div class="projectbox">
 				<a href="project.html"><img src="teamwork.png" alt="Project Image"/></a>
+				<h3>Project Name</h3>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>January 2021, Bristol UK</h4>
 			</div>
