third review update, fixing overflow on box text

--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
 		<h2>Portfolio</h2>
 		<div class="container">
 			<div class="projectbox">
-				<a href="project.html"><img src="tech.jpg" alt="Project Image"/></a>
-				<h3>Project Name</h3>
+				<div><a href="project.html"><img src="tech.jpg" alt="Project Image"/></a>
+				</div>
+				<div class="projectinfo">
+					<h3>Project Name</h3>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>October 2020, Mayden Academy, Bath UK</h4>
+			</div>
 			</div>
 			<div class="projectbox">
 				<a href="project.html"><img src="woman.jpg" alt="Project Image"/></a>
