--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="#home">Home</a></li><li><a href="#portfolio">Portfolio</a></li><li><a href="#aboutme">About Me</a></li><li class="lastnav"><a href="#contact">Contact</a></li>
+			<li><a href="#home">HOME</a></li>
+			<li><a href="#portfolio">PORTFOLIO</a></li>
+			<li><a href="#aboutme">ABOUT ME</a></li>
+			<li class="lastnav"><a href="#contact">CONTACT</a></li>
 		 </ul>
 	</nav>
 
@@ -20,23 +23,20 @@
 
 	<div class="intropage" id="home">
 		<div class="container">
-			<h1>JENNY ALLTON-TWI<span class="spinner">S</span>T</h1>
+			<h1>JENNY ALLTON-<span class="nowrap">TWI<span class="spinner">S</span>T</span></h1>
 		</div>
 	</div>
 
 
 
 	<div class="portfolio" id="portfolio">
-		<h2>Portfolio</h2>
+		<h2>PORTFOLIO</h2>
 		<div class="container">
 			<div class="projectbox">
-				<div><a href="project.html"><img src="tech.jpg" alt="Project Image"/></a>
-				</div>
-				<div class="projectinfo">
-					<h3>Project Name</h3>
+				<a href="project.html"><img src="tech.jpg" alt="Project Image"/></a>
+				<h3>Project Name</h3>
 				<p>Some info about this very cool thing I invented here</p>
 				<h4>October 2020, Mayden Academy, Bath UK</h4>
-			</div>
 			</div>
 			<div class="projectbox">
 				<a href="project.html"><img src="woman.jpg" alt="Project Image"/></a>
@@ -74,13 +74,12 @@
 
 
 	<div class="aboutme" id="aboutme">
-		<div class="container aboutmebackground">
-			
+		<div class="container aboutmebackground">		
 			<div class="aboutmebox">	
 				<img src="jennyaboutme.jpg" alt="Jenny Allton-Twist looking happy"/>
 			</div>
 			<div class="aboutmebox">
-				<h2>About Me</h2>
+				<h2>ABOUT ME</h2>
 				<p>Some stuff about me, a paragraph in which I talk humorously and succintly about my many achievements and accolades, as well as the interesting and altruistic activities I undertake in my spare time.</p>
 			</div>
 		</div>
