working third draft

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="normalize.css" type="text/css" rel="stylesheet">
 	<link href="indexstyle.css" type="text/css" rel="stylesheet">	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://kit.fontawesome.com/e0b3a2fd9f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -76,11 +77,16 @@
 	<div class="aboutme" id="aboutme">
 		<div class="container aboutmebackground">		
 			<div class="aboutmebox">	
-				<img src="jennyaboutme.jpg" alt="Jenny Allton-Twist looking happy"/>
+				<img class="aboutmeimg" src="jennyaboutme.jpg" alt="Jenny Allton-Twist looking happy"/>
 			</div>
 			<div class="aboutmebox">
 				<h2>ABOUT ME</h2>
-				<p>Some stuff about me, a paragraph in which I talk humorously and succintly about my many achievements and accolades, as well as the interesting and altruistic activities I undertake in my spare time.</p>
+				<p>I’m a full-stack software developer with an interest in back-end development and machine learning. I graduated from<a href="https://mayden.academy/"> Mayden Academy</a> in December 2020.</p>
+				<p>Prior to my formal training I have almost a decade’s experience in project management and product design in a superyacht interior design company. My strengths are in my problem-solving and communication skills, both written and verbal.</p>
+				<p>I love running, reading trashy urban fiction, and learning languages that are spoken by people as well as languages used by computers. Oh, and I really like burritos.</p>
+				<p></p>
+				<p>Skills/languages: Javascript, PHP, HTML5 CSS3, Node.js…and more to come!
+Check out my social media & blog in the links below.</p>
 			</div>
 		</div>
 	</div>
@@ -90,6 +96,7 @@
 			<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
 			<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
 			<a href="https://github.com/jennymegan" class="fa fa-github"></a>
+			
 		</div>
 		<h6>Copyright J A-T 2020 &copy;</h6>
 	</footer>
