--- a/project.html
+++ b/project.html
@@ -5,34 +5,39 @@
   	<title>Portfolio Project</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="normalize.css" type="text/css" rel="stylesheet">
-	<link href="Portfoliostyle.css" type="text/css" rel="stylesheet">	
+	<link href="indexstyle.css" type="text/css" rel="stylesheet">	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 	<nav>
 		<ul>
-			<li><a href="portfolio.html">Home</a></li>
-			<li><a href="portfolio.html#portfolio">Portfolio</a></li>
-			<li><a href="portfolio.html#aboutme">About Me</a></li>
-			<li><a href="portfolio.html#contact">Contact</a></li>
+			<li><a href="index.html#home">HOME</a></li>
+			<li><a href="index.html#portfolio">PORTFOLIO</a></li>
+			<li><a href="index.html#aboutme">ABOUT ME</a></li>
+			<li class="lastnav"><a href="index.html#contact">CONTACT</a></li>
 		 </ul>
-		 <!-- <div><img src="" alt=""/> Place for logo -->
 	</nav>
 
-	<div class="container project">
-		<div class="projectimg"><img src="projectimg.jpg" alt="Photos of Project" width="600"></div>
-		<div> 
-			<h2>Project The First</h2>
-			<p>This went well and we were all thrilled.</p>
+div class="aboutme" id="aboutme">
+		<div class="container aboutmebackground">		
+			<div class="aboutmebox">	
+				<img class="aboutmeimg" src="hacker.jpg" alt="We code like the matrix"/>
+			</div>
+			<div class="aboutmebox">
+				<h2>PROJECT ONE</h2>
+				<p>This was great fun, we all had to work together through sheets of plexiglass.</p>
+				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
+				
+			</div>
 		</div>
 	</div>
 	
 	<footer>
-		<div class="social">
+		<div class="social" id="contact">
 			<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
 			<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
-			<a href="https://github.com/jennymegan" class="fa fa-github"></a>
+			<a href="https://github.com/jennymegan" class="fa fa-github"></a>			
 		</div>
 		<h6>Copyright J A-T 2020 &copy;</h6>
 	</footer>
