post code review, fixed social icons

--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="normalize.css" type="text/css" rel="stylesheet">
 	<link href="indexstyle.css" type="text/css" rel="stylesheet">	
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" 	integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 		 </ul>
 	</nav>
 
-div class="aboutme" id="aboutme">
+<div class="aboutme" id="aboutme">
 		<div class="container aboutmebackground">		
 			<div class="aboutmebox">	
 				<img class="aboutmeimg" src="hacker.jpg" alt="We code like the matrix"/>
@@ -35,9 +35,10 @@ div class="aboutme" id="aboutme">
 	
 	<footer>
 		<div class="social" id="contact">
-			<a href="https://twitter.com/jennyat9" class="fa fa-twitter"></a>
-			<a href="https://linkedin.com/in/jennyalltontwist" class="fa fa-linkedin"></a>
-			<a href="https://github.com/jennymegan" class="fa fa-github"></a>			
+			<a href="https://dev.to/jennymegan" class="fab fa-dev"></a>		
+			<a href="https://twitter.com/jennyat9" class="fab fa-twitter"></a>
+			<a href="https://linkedin.com/in/jennyalltontwist" class="fab fa-linkedin"></a>
+			<a href="https://github.com/jennymegan" class="fab fa-github"></a>	
 		</div>
 		<h6>Copyright J A-T 2020 &copy;</h6>
 	</footer>
