updated after code review

--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="#home">HOME</a></li>
-			<li><a href="#portfolio">PORTFOLIO</a></li>
-			<li class="logo lastnav"><img src="logo1.png" alt="logo"/></li>
-			<li class="thirdnav"><a href="#aboutme">ABOUT ME</a></li>
-			<li class="lastnav"><a href="#contact">CONTACT</a></li>
+			<li>
+				<a href="#home">HOME</a>
+			</li>
+			<li>
+				<a href="#portfolio">PORTFOLIO</a>
+			</li>
+			<li class="logo lastnav">
+				<img src="logo1.png" alt="logo"/>
+			</li>
+			<li class="thirdnav">
+				<a href="#aboutme">ABOUT ME</a>
+			</li>
+			<li class="lastnav">
+				<a href="#contact">CONTACT</a>
+			</li>
 		 </ul>
 	</nav>
 
