--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 			<li>
 				<a href="#portfolio">PORTFOLIO</a>
 			</li>
-			<li class="logo lastnav">
+			<li class="logo hidenavborderrh">
 				<img src="logo1.png" alt="logo"/>
 			</li>
 			<li class="thirdnav">
 				<a href="#aboutme">ABOUT ME</a>
 			</li>
-			<li class="lastnav">
+			<li class="hidenavborderrh">
 				<a href="#contact">CONTACT</a>
 			</li>
 		 </ul>
