trying with a br tag set to display none

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	<div class="intropage" id="home">
 		<div class="container">
-			<h1>JENNY <span class="nowrap">ALLTON-<span><span class="nowrap">TWI<span class="spinner">S</span>T</span></h1>
+			<h1>JENNY ALLTON-<br class="linebreak"><span class="nowrap">TWI<span class="spinner">S</span>T</span></h1>
 		</div>
 	</div>
 
